# ExCode

./: .gitattributes  .gitignore  .last_build_id  CHANGELOG.md  CONTRIBUTING.md  ExCode.code-workspace  LICENSE.md  README.md  analysis_options.yaml  flutter_bootstrap.js  flutter_launcher_icons.yaml  flutter_native_splash.yaml  flutter_service_worker.js  index.html  main.dart.js  manifest.json  package-lock.json  pubspec.yaml  version.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api-cargo-check.yml  build-deploy-web.yml  build-release.yml  dart-analyze.yml  deploy-api.yml
android/app/: build.gradle  google-services.json
api/: .env-example  .gitignore  Cargo.toml  Shuttle.toml
api/schema/: schema.sql
api/src/: lib.rs  main.rs  models.rs  templates.rs
api/static/js/: main.js
api/templates/: base.html  edit.html  error.html  hello.html  paste.html
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
assets/shaders/: ink_sparkle.frag
codebin/: package-lock.json  package.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/src/: app.dart  factory.dart  helpers.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: supabase_test.dart  widget_test.dart
web/: index.html  manifest.json  styles.css
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
(+104 files in other folders)
