[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
serde = "1.0"
axum = "0.6.2"
sync_wrapper = "0.1.1"
tower-http = { version = "0.3.5", features = ["cors"] }
askama = "0.11.1"
shuttle-secrets = "0.8.0"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]
