[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-secrets = "0.40.0"
tokio = "1.26.0"
serde = "1.0"
axum = { version = "0.7.4", features = ["json"] }
sync_wrapper = "0.1.1"
tower-http = { version = "0.5.2", features = ["cors"] }
askama = "0.12.1"
serde_json = "1.0.91"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]
